--- a/Opdracht4/opdracht4.tex
+++ b/Opdracht4/opdracht4.tex
@@ -41,47 +41,54 @@ De chaostheorie is gebaseerd op meerdere principes:
 
 \begin{itemize}
 
-\item{\textbf{Het vlindereffect} \\
-Dit is het effect waarbij het flapperen van een vlinder's vleugels uiteindelijk een tornado aan de andere kant van de wereld zou kunnen veroorzaken. Het kan heel lang duren voordat het gebeurt, maar als de vlinder niet op de juist tijd en plek zijn vleugels had geflapperd, dan was de tornado er misschien nooit geweest. 
+	\item{\textbf{Het vlindereffect} \\
+		Dit is het effect waarbij het flapperen van een vlinder's vleugels uiteindelijk een tornado aan de andere kant van de wereld zou kunnen veroorzaken. Het kan heel lang duren voordat het gebeurt, maar als de vlinder niet op de juist tijd en plek zijn vleugels had geflapperd, dan was de tornado er misschien nooit geweest. 
 
-\begin{figure}[Hh]
-	\centering
-	\includegraphics[width=0.8\textwidth]{butterfly-effect.png}
-	\caption{Het vlindereffect uitgelegd.}
-\end{figure}
+		\begin{figure}[Hh]
+			\centering
+			\includegraphics[width=0.8\textwidth]{butterfly-effect.png}
+			\caption{Het vlindereffect uitgelegd.}
+		\end{figure}
 
-Meerdere kleine dergelijk gebeurtenissen kunnen, als een domino-effect, een steeds grotere gebeurtenis veroorzaken. Dit is ook van toepassing op ons eigen levens; wie weet wat voor effect een kleine beslissing vandaag zal hebben in de toekomst?
-}
+		Meerdere kleine dergelijk gebeurtenissen kunnen, als een domino-effect, een steeds grotere gebeurtenis veroorzaken. Dit is ook van toepassing op ons eigen levens; wie weet wat voor effect een kleine beslissing vandaag zal hebben in de toekomst?
+	}
 
-\item{\textbf{Onvoorspelbaarheid} \\
-Zoals boven uitgelegd, omdat wij nooit de begintoestanden in perfecte detail kunnen weten, is het onmogelijk om de staat van een dergelijke systeem in de toekomst te voorspellen. Elke kleine fout in het meten van de begin toestanden van zo'n systeem kan tot gigantische fouten tijdens het voorspellen, in dezelfde wijze als de vlinder hierboven genoemd. We kunnen niet het effect van alle vlinders in de wereld meten en daarom blijft het juist voorspellen van het weer heel lastig.}
+	\item{\textbf{Onvoorspelbaarheid} \\
+		Zoals boven uitgelegd, omdat wij nooit de begintoestanden in perfecte detail kunnen weten, is het onmogelijk om de staat van een dergelijke systeem in de toekomst te voorspellen. Elke kleine fout in het meten van de begin toestanden van zo'n systeem kan tot gigantische fouten tijdens het voorspellen, in dezelfde wijze als de vlinder hierboven genoemd. We kunnen niet het effect van alle vlinders in de wereld meten en daarom blijft het juist voorspellen van het weer heel lastig.
+	}
 
-\item{\textbf{Orde/wanorde} \\
-Chaos bestaat niet volledig alleen uit wanorde, al zou het zou wel kunnen lijken. Chaos is juist het verkennen van de transities tussen orde en wanorde.}
+	\item{\textbf{Orde/wanorde} \\
+		Chaos bestaat niet volledig alleen uit wanorde, al zou het zou wel kunnen lijken. Chaos is juist het verkennen van de transities tussen orde en wanorde.
+	}
 
-\item{\textbf{Menging} \\
-Dit betekent dat twee punten, of bijvoorbeeld twee water moleculen, dat in het begin zich naast elkaar bevonden uiteindelijk heel ver van elkaar terecht zullen komen. De twee water moleculen zijn misschien ooit begonnen in dezelfde rivier maar kunnen uiteindelijk aan tegenovergestelde kanten van de wereld terecht komen. Dit gebeurt door turbulentie veroorzakt door andere systemen. In het geval van de moleculen zou het wind of een boot kunnen zijn geweest.
+	\item{\textbf{Menging} \\
+		Dit betekent dat twee punten, of bijvoorbeeld twee water moleculen, dat in het begin zich naast elkaar bevonden uiteindelijk heel ver van elkaar terecht zullen komen. De twee water moleculen zijn misschien ooit begonnen in dezelfde rivier maar kunnen uiteindelijk aan tegenovergestelde kanten van de wereld terecht komen. Dit gebeurt door turbulentie veroorzakt door andere systemen. In het geval van de moleculen zou het wind of een boot kunnen zijn geweest.
 
-\begin{figure}[Hh]
-	\centering
-	\includegraphics[width=0.5\textwidth]{Airplane_vortex}
-	\caption{Menging ontstaan door turbulentie van de vliegtuig.}
-\end{figure}
-}
+		\begin{figure}[Hh]
+			\centering
+			\includegraphics[width=0.5\textwidth]{Airplane_vortex}
+			\caption{Menging ontstaan door turbulentie van de vliegtuig.}
+		\end{figure}
+	}
 
-\item{\textbf{Feedback} \\
-Dit heeft betrekking op reacties op elke actie die plaatsvindt. Bijvoorbeeld als de prijs van een beurs plotselling zakt, zullen de aandelen worden verkocht om zo min mogelijk geld te verliezen. Hierdoor zouden de prijzen van de aandelen weer kunnen stijgen of juist veel sneller zakken.}
+	\item{\textbf{Feedback} \\
+		Dit heeft betrekking op reacties op elke actie die plaatsvindt. Bijvoorbeeld als de prijs van een beurs plotselling zakt, zullen de aandelen worden verkocht om zo min mogelijk geld te verliezen. Hierdoor zouden de prijzen van de aandelen weer kunnen stijgen of juist veel sneller zakken.
+	}
 
-\item{\textbf{Fractals} \\
-Een fractal is een eindeloos patroon. Het zijn oneindig complexe patronen dat gelijksoortig zijn op meerdere schalen. Ze worden gecr\"eerd door een simpele proces steeds te herhalen in een lopend feedback loop. Ze worden gedreven door recursie, het aanroepen van zichzelf, en zijn afbeelding van dynamische systemen, ook bekend als fotos van chaos. Deze patronen komen heel vaak voor in de natuur; bomen, wolken, schelpen, etc. zijn uitgebouwd uit de soort patronen.
+	\item{\textbf{Fractals} \\
+		Een fractal is een eindeloos patroon. Het zijn oneindig complexe patronen dat gelijksoortig zijn op meerdere schalen. Ze worden gecr\"eerd door een simpele proces steeds te herhalen in een lopend feedback loop. Ze worden gedreven door recursie, het aanroepen van zichzelf, en zijn afbeelding van dynamische systemen, ook bekend als fotos van chaos. Deze patronen komen heel vaak voor in de natuur; bomen, wolken, schelpen, etc. zijn uitgebouwd uit de soort patronen.
 
-\begin{figure}[Hh]
-	\centering
-	\includegraphics[width=0.5\textwidth]{fractal-tree}
-	\caption{Voorbeeld van fractals in de natuur.}
-\end{figure}
+		\begin{figure}[Hh]
+			\centering
+			\includegraphics[width=0.5\textwidth]{fractal-tree}
+			\caption{Voorbeeld van fractals in de natuur.}
+		\end{figure}
 
-}
+	}
+
+	\section{Het begin van het heelal}
+
+	Met het onderzoeken van de chaostheorie, is er ook een alternatief voor de oerknal theorie onstaan, de zogenaamd \textit{Chaotische inflatie theorie}. Deze theorie probeert te bewijzen dat het helaal niet \'e\'en enkele gebeurtenis is en dat het wel begonnen is met een gigantisch knal, dat onze heelal niet het enige heelal, maar in plaats daarvan is het \'e\'en van een oneindig parallele heelals. Deze theorie is nog niet onbewezen en er is zelfs wat bewijs gevonden in de vorm van energie fluctuaties in het heelal. Dit zou kunnen uitleggen waar het heelal nou precies van is onstaan, iets wat de oerknal theorie niet kan bewijzen.
 
 \end{itemize}
 
@@ -91,43 +98,6 @@ Een fractal is een eindeloos patroon. Het zijn oneindig complexe patronen dat ge
 
 \bibitem{}
 	\url{http://en.wikipedia.org/wiki/Circle_Limit_III}
-
-\bibitem{}
-	\url{http://nl.wikipedia.org/wiki/Hyperbolische_meetkunde}
-
-\bibitem{}
-	\url{http://en.wikipedia.org/wiki/Hyperbolic_geometry}
-
-\bibitem{}
-	\url{http://en.wikipedia.org/wiki/Wallpaper_group}
-
-\bibitem{}
-	\url{http://en.wikipedia.org/wiki/Tessellation}
-
-\bibitem{}
-	\url{http://nl.wikipedia.org/wiki/Betegeling}
-
-\bibitem{}
-	\url{http://nl.wikipedia.org/wiki/Houtsnede}
-
-\bibitem{}
-	\url{http://en.wikipedia.org/wiki/Non-Euclidean_geometry}
-
-\bibitem{}
-	\url{http://nl.wikipedia.org/wiki/Niet-euclidische_meetkunde}
-
-\bibitem{}
-	\url{http://nl.wikipedia.org/wiki/Maurits_Cornelis_Escher}
-
-\bibitem{}
-	\url{http://en.wikipedia.org/wiki/M._C._Escher}
-
-\bibitem{}
-	\url{http://en.wikipedia.org/wiki/Baarn}
-
-\bibitem{}
-	\url{http://nl.wikipedia.org/wiki/Donald_Coxeter}
-
 	
 \end{thebibliography}
 
