--- a/Opdracht8/opdracht9.tex
+++ b/Opdracht8/opdracht9.tex
@@ -49,6 +49,8 @@ Uit alle wiskundig kennis opgenomen in dat boek, is de Fibonacci reeks het beken
 	\caption{Portret van Fibonnaci door onbekende auteur.}
 \end{figure}
 
+\pagebreak
+
 \section{De reeks}
 
 Deze reeks is niet oorspronkelijk bedacht door Fibonacci zelf en wordt al genoemd in het boek \textit{Chhandah-sh\=astra} (Kunst van de Versmaat), geschreven door de Indiase schrijver Pingala tussen 200 - 450 voor Christus. De reeks was hier \textit{maatraameru} (Berg van de cadens) genoemd. Het is mogelijk dat Fibonacci tijdens zijn verblijf bij de arabische meesters deze reeks is tegengekomen.
