--- a/Opdracht9/opdracht9.tex
+++ b/Opdracht9/opdracht9.tex
@@ -37,14 +37,41 @@
 
 De gulden snede is een bekende verhouding in de wiskunde. Het houdt in dat bij twee lengtes, de verhouding tussen hun optelling en de grootste waarde gelijk is aan de verhouding tussen beide lijnen, zoals afgebeeld in Figuur \ref{fig:ratio-lines}. In dit geval is de verhouding tussen \( \frac{a+b}{a} \) gelijk aan \( \frac{a}{b} \). Dit verhouding wordt aangegeven met de griekse letter \(\varphi\) (phi) en staat gelijk aan \(\varphi = \frac{1+\sqrt{5}}{2} \approx 1.6180339887\). 
 
-De wiskundige eigenschappen van dit getal worden als sinds de oudheid bestudeerd, maar het heeft de term \textit{gulden snede} pas in de 19e eeuw gekregen. Het vroegst bekende studie van dit getal stemt uit de tijd van Oude Griekland. De grieken waren begonnen met het bestuderen van de gulden snede vanwege zijn regelmatig verschijning in de geometrie en zijn een belangrijkheid om pentagrammen en pentagonnen te tekenen. De griekse wiskundig Euclides heeft in zijn meetkundig en rekenkundig verzamelwerk, de \textit{Elementen}, de eerste bekende definitie van wat nu bekend staat als de gulden sneden. Euclides beschreef het als ``Een rechte lijn is zogenaamd gesneden in de extreme en gemiddelde verhouding wanneer, zoals het gehele lijn staat voor de grootste segment, zo staat de grotere tot de kleinere.''. Door het gehele boek wordt de gulden snede gebruikt bij meerdere stellingen en hun bewijs. De verhouding was verder onderzocht in het boek \texit{De divina proportione} (De goddelijke properties) van de italianse wiskundig Fra Luca Bartolomeo de Pacioli, een mede-collaborateur van Leonardo da Vinci en een van de oorspronkelijk bijdragers aan het vakgebied van accountancy. Dit boek beschrijft de gulden snede vanuit een wiskundig inkijk hoek en bestudeert ook polygonen, een figuur in een plat vlak gevormd door rechte lijnen. Sinds de 20e eeuw is de gulden snede gepresenteerd door de letter \(\varphi\), genoemd naar de griekse beeldhouwer Phidias, die de gulden snede gebruikte in zijn kunst. Het wordt ook gepresenteerd door de letter \(\tau\) (tau), die `snijden' betekent.
+\begin{figure}[Hh]
+	\centering
+	\includegraphics[width=0.35\textwidth]{golden-ratio-line.png}
+	\caption{De verhouding tussen twee lengtes.}
+	\label{fig:ratio-lines}
+\end{figure}
 
+De wiskundige eigenschappen van dit getal worden als sinds de oudheid bestudeerd, maar het heeft de term \textit{gulden snede} pas in de 19e eeuw gekregen. Het vroegst bekende studie van dit getal stemt uit de tijd van Oude Griekland. De grieken waren begonnen met het bestuderen van de gulden snede vanwege zijn regelmatig verschijning in de geometrie en zijn een belangrijkheid om pentagrammen en pentagonnen te tekenen. De griekse wiskundig Euclides heeft in zijn meetkundig en rekenkundig verzamelwerk, de \textit{Elementen}, de eerste bekende definitie van wat nu bekend staat als de gulden sneden. Euclides beschreef het als ``Een rechte lijn is zogenaamd gesneden in de extreme en gemiddelde verhouding wanneer, zoals het gehele lijn staat voor de grootste segment, zo staat de grotere tot de kleinere.''. Door het gehele boek wordt de gulden snede gebruikt bij meerdere stellingen en hun bewijs. De verhouding was verder onderzocht in het boek \textit{De divina proportione} (De goddelijke properties) van de italianse wiskundig Fra Luca Bartolomeo de Pacioli, een mede-collaborateur van Leonardo da Vinci en een van de oorspronkelijk bijdragers aan het vakgebied van accountancy. Dit boek beschrijft de gulden snede vanuit een wiskundig inkijk hoek en bestudeert ook polygonen, een figuur in een plat vlak gevormd door rechte lijnen. Sinds de 20e eeuw is de gulden snede gepresenteerd door de letter \(\varphi\), genoemd naar de griekse beeldhouwer Phidias, die de gulden snede gebruikte in zijn kunst. Het wordt ook gepresenteerd door de letter \(\tau\) (tau), die `snijden' betekent.
+
+\section{Toepassingen}
+
+De guldens snede kun je overal tegenkomen. Het is te vinden in de verhoudingen van gebouwen, verhoudingen van gezicht, verhoudingen van bloemen, etc.. Er zijn mensen die geloven dat het begrip van schoonheid heel nauw met \(\varphi\) samenhangt. Bekende gebouwen die ontworpen zijn met de gulden snede als basis zijn bijvoorbeld de grote pyramide van Gizeh of het Parthenon in Athene. In Figuur \ref{fig:parthenon} is de gulden snede te zien in de ontwerp van de Parthenon. Op de afbeelding is de spiraal van Fibonacci te zien. Dit spiraal is gebaseerd op de Fibonacci reeks, een reeks die onstaat door de vorige twee getallen met elkaar op te tellen. De verhouding tussen elke getal en voorgaande getal komt uit heel erg in de buurt van de gulden snede. Door deze spiraal over de Parthenon te tekenen is het makkelijk om gulden snede bij elke onderdeel terugkomen.
 
 \begin{figure}[Hh]
-		\centering
-		\includegraphics[width=0.35\textwidth]{golden-ratio-line.png}
-		\caption{De verhouding tussen twee lengtes.}
-		\label{fig:ratio-lines}
-	\end{figure}
+    \centering
+    \begin{subfigure}[b]{0.5\textwidth}
+        \includegraphics[width=\textwidth]{gold08.jpg}
+		\caption{De parthenon.}
+		\label{fig:parthenon}
+    \end{subfigure}%
+    ~ 
+    \begin{subfigure}[b]{0.5\textwidth}
+        \includegraphics[width=\textwidth]{pyramid.jpg}
+        \caption{De grote piramide van Gizeh.}
+        \label{fig:gizeh}
+    \end{subfigure}
+    
+    \caption{De gulden snede in bouwkunsten.}
+    \label{fig:animals}
+\end{figure}
+
+% \begin{figure}[Hh]
+% 	\includegraphics[width=0.6\textwidth]{gold08.jpg}
+% 	\caption{De verhouding tussen twee lengtes.}
+% 	\label{fig:ratio-lines}
+% \end{figure}
 
 \end{document}
